Harden XStream campaign saves on Java 17