@@ -1,11 +1,12 @@
 /*
  * Java 17 compatibility replacement for XStream 1.4.10's Fields helper.
  *
- * XStream 1.4.10 calls setAccessible(true) while its collection converters are
- * being initialized. Java 17 throws InaccessibleObjectException for private
- * java.base fields unless the process was started with --add-opens. CheerpJ
- * does not expose that JVM startup flag, so inaccessible optional fields must
- * be treated exactly like fields blocked by a SecurityManager: unavailable.
+ * Java 17 module boundaries reject setAccessible(true) for java.base fields.
+ * XStream 1.4.10 already has dedicated converters for EnumSet, EnumMap and
+ * other JDK types, but those converters are disabled when Fields.locate()
+ * returns null. Keep the Field metadata and use sun.misc.Unsafe as a fallback
+ * for field access when normal reflection is blocked. This mirrors XStream's
+ * own SunUnsafeReflectionProvider and preserves the original converter paths.
  */
 package com.thoughtworks.xstream.core.util;
 
@@ -14,7 +15,21 @@ import java.lang.reflect.Modifier;
 
 import com.thoughtworks.xstream.converters.reflection.ObjectAccessException;
 
+import sun.misc.Unsafe;
+
 public class Fields {
+    private static final Unsafe UNSAFE = initUnsafe();
+
+    private static Unsafe initUnsafe() {
+        try {
+            final Field field = Unsafe.class.getDeclaredField("theUnsafe");
+            field.setAccessible(true);
+            return (Unsafe) field.get(null);
+        } catch (final Throwable ignored) {
+            return null;
+        }
+    }
+
     public static Field locate(final Class definedIn, final Class fieldType, final boolean isStatic) {
         Field field = null;
         try {
@@ -26,12 +41,17 @@ public class Fields {
                 }
             }
             if (field != null && !field.isAccessible()) {
-                field.setAccessible(true);
+                try {
+                    field.setAccessible(true);
+                } catch (final RuntimeException inaccessibleOnJava9Plus) {
+                    if (UNSAFE == null) {
+                        field = null;
+                    }
+                }
             }
         } catch (final SecurityException e) {
             field = null;
         } catch (final RuntimeException e) {
-            // Java 9+ InaccessibleObjectException is a RuntimeException.
             field = null;
         } catch (final NoClassDefFoundError e) {
             field = null;
@@ -43,7 +63,13 @@ public class Fields {
         try {
             final Field result = type.getDeclaredField(name);
             if (!result.isAccessible()) {
-                result.setAccessible(true);
+                try {
+                    result.setAccessible(true);
+                } catch (final RuntimeException inaccessibleOnJava9Plus) {
+                    if (UNSAFE == null) {
+                        throw inaccessibleOnJava9Plus;
+                    }
+                }
             }
             return result;
         } catch (final SecurityException e) {
@@ -60,29 +86,67 @@ public class Fields {
     public static void write(final Field field, final Object instance, final Object value) {
         try {
             field.set(instance, value);
-        } catch (final SecurityException e) {
-            throw wrap("Cannot write field", field.getType(), field.getName(), e);
-        } catch (final RuntimeException e) {
-            throw wrap("Cannot write field", field.getType(), field.getName(), e);
-        } catch (final IllegalAccessException e) {
-            throw wrap("Cannot write field", field.getType(), field.getName(), e);
-        } catch (final NoClassDefFoundError e) {
-            throw wrap("Cannot write field", field.getType(), field.getName(), e);
+            return;
+        } catch (final Throwable reflectionFailure) {
+            if (UNSAFE != null) {
+                try {
+                    unsafeWrite(field, instance, value);
+                    return;
+                } catch (final Throwable unsafeFailure) {
+                    throw wrap("Cannot write field", field.getType(), field.getName(), unsafeFailure);
+                }
+            }
+            throw wrap("Cannot write field", field.getType(), field.getName(), reflectionFailure);
         }
     }
 
     public static Object read(final Field field, final Object instance) {
         try {
             return field.get(instance);
-        } catch (final SecurityException e) {
-            throw wrap("Cannot read field", field.getType(), field.getName(), e);
-        } catch (final RuntimeException e) {
-            throw wrap("Cannot read field", field.getType(), field.getName(), e);
-        } catch (final IllegalAccessException e) {
-            throw wrap("Cannot read field", field.getType(), field.getName(), e);
-        } catch (final NoClassDefFoundError e) {
-            throw wrap("Cannot read field", field.getType(), field.getName(), e);
+        } catch (final Throwable reflectionFailure) {
+            if (UNSAFE != null) {
+                try {
+                    return unsafeRead(field, instance);
+                } catch (final Throwable unsafeFailure) {
+                    throw wrap("Cannot read field", field.getType(), field.getName(), unsafeFailure);
+                }
+            }
+            throw wrap("Cannot read field", field.getType(), field.getName(), reflectionFailure);
         }
+    }
+
+    private static Object unsafeRead(final Field field, final Object instance) {
+        final boolean isStatic = Modifier.isStatic(field.getModifiers());
+        final Object base = isStatic ? UNSAFE.staticFieldBase(field) : instance;
+        final long offset = isStatic ? UNSAFE.staticFieldOffset(field) : UNSAFE.objectFieldOffset(field);
+        final Class type = field.getType();
+        if (!type.isPrimitive()) return UNSAFE.getObject(base, offset);
+        if (type == Integer.TYPE) return Integer.valueOf(UNSAFE.getInt(base, offset));
+        if (type == Long.TYPE) return Long.valueOf(UNSAFE.getLong(base, offset));
+        if (type == Short.TYPE) return Short.valueOf(UNSAFE.getShort(base, offset));
+        if (type == Character.TYPE) return Character.valueOf(UNSAFE.getChar(base, offset));
+        if (type == Byte.TYPE) return Byte.valueOf(UNSAFE.getByte(base, offset));
+        if (type == Float.TYPE) return Float.valueOf(UNSAFE.getFloat(base, offset));
+        if (type == Double.TYPE) return Double.valueOf(UNSAFE.getDouble(base, offset));
+        if (type == Boolean.TYPE) return Boolean.valueOf(UNSAFE.getBoolean(base, offset));
+        throw new IllegalArgumentException("Unsupported primitive field type: " + type.getName());
+    }
+
+    private static void unsafeWrite(final Field field, final Object instance, final Object value) {
+        final boolean isStatic = Modifier.isStatic(field.getModifiers());
+        final Object base = isStatic ? UNSAFE.staticFieldBase(field) : instance;
+        final long offset = isStatic ? UNSAFE.staticFieldOffset(field) : UNSAFE.objectFieldOffset(field);
+        final Class type = field.getType();
+        if (!type.isPrimitive()) { UNSAFE.putObject(base, offset, value); return; }
+        if (type == Integer.TYPE) { UNSAFE.putInt(base, offset, ((Integer)value).intValue()); return; }
+        if (type == Long.TYPE) { UNSAFE.putLong(base, offset, ((Long)value).longValue()); return; }
+        if (type == Short.TYPE) { UNSAFE.putShort(base, offset, ((Short)value).shortValue()); return; }
+        if (type == Character.TYPE) { UNSAFE.putChar(base, offset, ((Character)value).charValue()); return; }
+        if (type == Byte.TYPE) { UNSAFE.putByte(base, offset, ((Byte)value).byteValue()); return; }
+        if (type == Float.TYPE) { UNSAFE.putFloat(base, offset, ((Float)value).floatValue()); return; }
+        if (type == Double.TYPE) { UNSAFE.putDouble(base, offset, ((Double)value).doubleValue()); return; }
+        if (type == Boolean.TYPE) { UNSAFE.putBoolean(base, offset, ((Boolean)value).booleanValue()); return; }
+        throw new IllegalArgumentException("Unsupported primitive field type: " + type.getName());
     }
 
     private static ObjectAccessException wrap(final String message, final Class type, final String name,
